--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ h1 {
   padding: 0;
   border: 0;
   margin: 0;
-	color: #ffffff;
+	color: #7facaa;
 	margin: 0 0 15px 0;
 	text-align: center;
   font-size: 100%;
@@ -110,11 +110,15 @@ textarea {
 .header {
   width: 500px;
 	padding: 10px 10px 10px 10px;
-	background-color: #b56663;
+	background-color: #ffffff;
 	margin: 0 auto 0 auto;
 }
 .header a {
 	color: #ffffff;
+}
+.header h1 {
+  font-size: 26px;
+  font-weight: bold;
 }
 .main-content {
 	width: 500px;
@@ -124,6 +128,12 @@ textarea {
 }
 .main-content p {
   line-height: 30px;
+}
+.main-content ol {
+  padding: 0 0 0 50px;
+}
+.main-content ul {
+  padding: 0 0 0 50px;
 }
 .nav {
 	text-align: center;
@@ -143,11 +153,13 @@ textarea {
 	margin: 30px auto 0 auto;
 }
 .recipes li {
-  border: 1px solid #b56663;
+  border: 0px solid #b56663;
   padding-left: 15px;
 }
 .recipes h3 {
   border-bottom: 0;
+  font-size: 20px;
+  font-weight: bold;
 }
 .recipes a {
   color: #7facaa;
